--- a/src/content/blog/2025/2025-12-22-2025-in-a-nutshell/index.mdx
+++ b/src/content/blog/2025/2025-12-22-2025-in-a-nutshell/index.mdx
@@ -3,6 +3,7 @@ title: '2025 in a Nutshell'
 pubDate: 2025-12-28
 slug: 2025-in-a-nutshell
 heroImage: ./cover2.png
+heroVideo: ./cover2.webm
 heroImageMeta:
   prompt: 'Create a 1920x1080 pixel art illustration in a detailed retro style (high-quality pixel art, not chibi). The scene features a huge “2025” number made of solid, slightly textured pixels, placed on the ground like a monument. A full-body adult man is leaning casually against the “2025”, one arm resting on it. He has short dark hair, light stubble, light-to-medium skin tone, and wears a simple light-colored t-shirt, casual pants, and sneakers. His posture is relaxed and confident, with a gentle smile, conveying optimism and calm. Style: Crisp pixel art with visible pixels Soft, warm color palette Subtle shading and lighting Slight depth and perspective (foreground character, background scenery) Background: Simple gradient from green to cyan, the floor should follow the same pattern Mood: hopeful, fresh start, welcoming the future'
   author: 'Gemini Nano Banana'
