--- a/src/content/blog/2025/2025-12-23-design-system-consistency/index.mdx
+++ b/src/content/blog/2025/2025-12-23-design-system-consistency/index.mdx
@@ -2,6 +2,7 @@
 title: 'Design system patterns: UX consistency'
 pubDate: 2026-1-6
 slug: /design-system-ux-patterns-consistency
+heroVideo: ./cover.webm
 heroImage: ./cover.png
 heroImageMeta:
   prompt: 'Create a pixel art image in 1920x1080 resolution.
@@ -15,7 +16,6 @@ tags:
  - design system
  - ux
 ---
-
 A design system is a collection of reusable components—encompassing UI elements, patterns, guidelines, code, and documentation—that helps teams build products more effectively. However, having these components is not enough. The true power of a design system lies in how consistently these components are applied across the product.
 
 One of the main goals of a design system is to ensure behavioral and visual consistency across a product, creating a unified user experience regardless of the page the user is visiting. Consistency is equally important from a developer's point of view by providing a common language and patterns to follow.
