--- a/src/content/blog/2025/2025-12-23-i18n-strings-organization/index.mdx
+++ b/src/content/blog/2025/2025-12-23-i18n-strings-organization/index.mdx
@@ -2,6 +2,7 @@
 title: 'Organizing i18n strings for scalability'
 pubDate: 2026-01-06
 slug: /i18n-strings-organization
+heroVideo: ./cover.webm
 heroImage: ./cover.png
 heroImageMeta:
   prompt: ''
