--- a/src/content/blog/2026/2026-01-05-how-to-know-deployed-frontend-version/index.mdx
+++ b/src/content/blog/2026/2026-01-05-how-to-know-deployed-frontend-version/index.mdx
@@ -2,6 +2,7 @@
 title: 'How to know which version of your frontend is deployed'
 pubDate: 2026-01-30
 slug: /how-to-know-which-version-of-your-frontend-is-deployed
+heroVideo: ./cover.webm
 heroImage: ./cover.png
 heroImageMeta:
   author: "Gemini Banana Pro"
