--- a/src/content/blog/2025/2025-12-31-oxfmt-oxlint/index.mdx
+++ b/src/content/blog/2025/2025-12-31-oxfmt-oxlint/index.mdx
@@ -2,6 +2,7 @@
 title: 'Speed up 10x (and more) code formatting and linting with oxfmt and oxlint'
 pubDate: 2026-01-23
 slug: speed-up-10x-code-formatting-and-linting-with-oxfmt-and-oxlint
+heroVideo: ./cover.webm
 heroImage: ./cover.png
 heroImageMeta:
   prompt: '16-bit pixel art style, retro SNES aesthetic. A high-speed hyperspace jump effect, centered composition. White star streaks and motion lines radiating rapidly from the center, mimicking a warp speed tunnel. In the dead center is the OXC logo, integrated into the speed effect. Background: A clean vertical gradient split by a clear horizon line. Use a random combination of two cool solid tones (choose between: deep purple, neon cyan, matrix green, or royal blue). Composition: strictly centered elements with wide negative space, leaving a 20% empty padding area around the main subject. High definition, sharp edges, dithering, 2D game asset.'
